# MiniQtExample

./: .gitignore  CMakeLists.txt  main.cpp
